--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -326,9 +326,11 @@
     <Content Include="Areas\Business\Css\images\zffs_wx.png" />
     <Content Include="Areas\Business\Css\images\zffs_zfb.png" />
     <Content Include="Areas\Business\Css\images\zmsmrz.png" />
+    <Content Include="Areas\Business\Css\JYPX\JYPX_GLPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_ITPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_JJGR.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_JJJG.css" />
+    <Content Include="Areas\Business\Css\JYPX\JYPX_SJPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_TYPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_XLJY.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_YSPX.css" />
@@ -581,8 +583,12 @@
     <Content Include="Areas\Business\Scripts\Business\GRZL\MMSZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HBSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\HFCZ\HFCZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_GLPX.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_GLPXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_ITPX.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_ITPXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_SJPX.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_SJPXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_TYPX.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_TYPXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_XLJY.js" />
@@ -1244,9 +1250,11 @@
     <Compile Include="Areas\Business\Controllers\FC\FC_XZLController.cs" />
     <Compile Include="Areas\Business\Controllers\GRZLController.cs" />
     <Compile Include="Areas\Business\Controllers\HFCZController.cs" />
+    <Compile Include="Areas\Business\Controllers\JYPX\JYPX_GLPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJGRController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJJGController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_ITPXController.cs" />
+    <Compile Include="Areas\Business\Controllers\JYPX\JYPX_SJPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_TYPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_XLJYController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_YSPXController.cs" />
@@ -1636,6 +1644,8 @@
     <Content Include="Areas\Business\Views\JYPX_YSPX\JYPX_YSPX.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_TYPX\JYPX_TYPX.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_ITPX\JYPX_ITPX.cshtml" />
+    <Content Include="Areas\Business\Views\JYPX_SJPX\JYPX_SJPX.cshtml" />
+    <Content Include="Areas\Business\Views\JYPX_GLPX\JYPX_GLPX.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
