--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -334,6 +334,7 @@
     <Content Include="Areas\Business\Css\JYPX\JYPX_TYPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_XLJY.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_YSPX.css" />
+    <Content Include="Areas\Business\Css\JYPX\JYPX_YYEJY.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_YYPXJG.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_YYPXJS.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_ZXXFDB.css" />
@@ -595,6 +596,8 @@
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_XLJYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_YSPX.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_YSPXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_YYEJY.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_YYEJYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_YYPXJSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HFCZ\ZFFS.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_JJGR.js" />
@@ -1258,6 +1261,7 @@
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_TYPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_XLJYController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_YSPXController.cs" />
+    <Compile Include="Areas\Business\Controllers\JYPX\JYPX_YYEJYController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_YYPXJGController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_YYPXJSController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_ZXXFDBController.cs" />
@@ -1646,6 +1650,7 @@
     <Content Include="Areas\Business\Views\JYPX_ITPX\JYPX_ITPX.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_SJPX\JYPX_SJPX.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_GLPX\JYPX_GLPX.cshtml" />
+    <Content Include="Areas\Business\Views\JYPX_YYEJY\JYPX_YYEJY.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
