--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -102,6 +102,7 @@
     <Compile Include="BLL\JYPX\JYPX_TYPXBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_XLJYBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_YSPXBLL.cs" />
+    <Compile Include="BLL\JYPX\JYPX_YYEJYBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_YYPXJGBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_YYPXJSBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_ZXXFDBBLL.cs" />
