--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -330,6 +330,7 @@
     <Content Include="Areas\Business\Css\JYPX\JYPX_ITPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_JJGR.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_JJJG.css" />
+    <Content Include="Areas\Business\Css\JYPX\JYPX_LX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_SJPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_TYPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_XLJY.css" />
@@ -588,6 +589,8 @@
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_GLPXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_ITPX.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_ITPXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_LX.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_LXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_SJPX.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_SJPXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_TYPX.js" />
@@ -1257,6 +1260,7 @@
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJGRController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJJGController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_ITPXController.cs" />
+    <Compile Include="Areas\Business\Controllers\JYPX\JYPX_LXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_SJPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_TYPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_XLJYController.cs" />
@@ -1651,6 +1655,7 @@
     <Content Include="Areas\Business\Views\JYPX_SJPX\JYPX_SJPX.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_GLPX\JYPX_GLPX.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_YYEJY\JYPX_YYEJY.cshtml" />
+    <Content Include="Areas\Business\Views\JYPX_LX\JYPX_LX.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
