--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -98,6 +98,7 @@
     <Compile Include="BLL\JYPX\JYPX_ITPXBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_JJGRBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_JJJGBLL.cs" />
+    <Compile Include="BLL\JYPX\JYPX_LXBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_SJPXBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_TYPXBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_XLJYBLL.cs" />
