--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Maps\JYPX\JYPX_JJJGJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_LXJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_SJPXJBXX_Map.cs" />
+    <Compile Include="Maps\JYPX\JYPX_TYJLJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_TYPXJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_XLJYJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_YMJBXX_Map.cs" />
@@ -320,6 +321,7 @@
     <Compile Include="Models\JYPX\JYPX_JJJGJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_LXJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_SJPXJBXX.cs" />
+    <Compile Include="Models\JYPX\JYPX_TYJLJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_TYPXJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_XLJYJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_YMJBXX.cs" />
