--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -332,6 +332,7 @@
     <Content Include="Areas\Business\Css\JYPX\JYPX_JJJG.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_LX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_SJPX.css" />
+    <Content Include="Areas\Business\Css\JYPX\JYPX_TYJL.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_TYPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_XLJY.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_YM.css" />
@@ -595,6 +596,8 @@
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_LXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_SJPX.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_SJPXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_TYJL.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_TYJLYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_TYPX.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_TYPXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_XLJY.js" />
@@ -1268,6 +1271,7 @@
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_ITPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_LXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_SJPXController.cs" />
+    <Compile Include="Areas\Business\Controllers\JYPX\JYPX_TYJLController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_TYPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_XLJYController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_YMController.cs" />
@@ -1666,6 +1670,7 @@
     <Content Include="Areas\Business\Views\JYPX_LX\JYPX_LX.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_YM\JYPX_YM.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_YSPXJS\JYPX_YSPXJS.cshtml" />
+    <Content Include="Areas\Business\Views\JYPX_TYJL\JYPX_TYJL.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
