--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -331,6 +331,7 @@
     <Content Include="Areas\Business\Css\JYPX\JYPX_JJGR.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_JJJG.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_LX.css" />
+    <Content Include="Areas\Business\Css\JYPX\JYPX_PBPK.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_SJPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_TYJL.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_TYPX.css" />
@@ -594,6 +595,8 @@
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_ITPXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_LX.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_LXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_PBPK.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_PBPKYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_SJPX.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_SJPXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_TYJL.js" />
@@ -1270,6 +1273,7 @@
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJJGController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_ITPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_LXController.cs" />
+    <Compile Include="Areas\Business\Controllers\JYPX\JYPX_PBPKController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_SJPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_TYJLController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_TYPXController.cs" />
@@ -1671,6 +1675,7 @@
     <Content Include="Areas\Business\Views\JYPX_YM\JYPX_YM.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_YSPXJS\JYPX_YSPXJS.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_TYJL\JYPX_TYJL.cshtml" />
+    <Content Include="Areas\Business\Views\JYPX_PBPK\JYPX_PBPK.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
