--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -1160,6 +1160,9 @@
     <Content Include="Config\SpringConfig\BLLQZZP.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Config\SpringConfig\BLLLYJD.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Config\SpringConfig\BLLSHFW.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -1184,6 +1187,7 @@
     <Content Include="Config\SpringConfig\ControllersSHFW.xml" />
     <Content Include="Config\SpringConfig\ControllersSWFW.xml" />
     <Content Include="Config\SpringConfig\ControllersJYPX.xml" />
+    <Content Include="Config\SpringConfig\ControllersLYJD.xml" />
     <Content Include="Config\SpringConfig\ControllersZSJM.xml" />
     <Content Include="Config\SpringConfig\ControllersLR.xml" />
     <Content Include="Config\SpringConfig\ControllersXXYL.xml" />
@@ -1298,6 +1302,7 @@
     <Compile Include="Areas\Business\Controllers\LR\LR_WDController.cs" />
     <Compile Include="Areas\Business\Controllers\LR\LR_WSController.cs" />
     <Compile Include="Areas\Business\Controllers\LR\LR_YJController.cs" />
+    <Compile Include="Areas\Business\Controllers\LYJD\LYJD_LXSController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_AFSBController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_BZController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_DGDLController.cs" />
@@ -1676,6 +1681,7 @@
     <Content Include="Areas\Business\Views\JYPX_YSPXJS\JYPX_YSPXJS.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_TYJL\JYPX_TYJL.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_PBPK\JYPX_PBPK.cshtml" />
+    <Content Include="Areas\Business\Views\LYJD_LXS\LYJD_LXS.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
