--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -133,6 +133,7 @@
     <Compile Include="LR\ILR_YJBLL.cs" />
     <Compile Include="LYJD\ILYJD_GNYBLL.cs" />
     <Compile Include="LYJD\ILYJD_LXSBLL.cs" />
+    <Compile Include="LYJD\ILYJD_ZBYBLL.cs" />
     <Compile Include="PFCG\IPFCG_AFSBBLL.cs" />
     <Compile Include="PFCG\IPFCG_BZBLL.cs" />
     <Compile Include="PFCG\IPFCG_DGDLBLL.cs" />
