--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -131,7 +131,9 @@
     <Compile Include="LR\ILR_WDBLL.cs" />
     <Compile Include="LR\ILR_WSBLL.cs" />
     <Compile Include="LR\ILR_YJBLL.cs" />
+    <Compile Include="LYJD\ILYJD_CJYBLL.cs" />
     <Compile Include="LYJD\ILYJD_GNYBLL.cs" />
+    <Compile Include="LYJD\ILYJD_JDZSYDBLL.cs" />
     <Compile Include="LYJD\ILYJD_LXSBLL.cs" />
     <Compile Include="LYJD\ILYJD_ZBYBLL.cs" />
     <Compile Include="PFCG\IPFCG_AFSBBLL.cs" />
