--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -356,7 +356,9 @@
     <Content Include="Areas\Business\Css\LR\LR_WD.css" />
     <Content Include="Areas\Business\Css\LR\LR_WS.css" />
     <Content Include="Areas\Business\Css\LR\LR_YJ.css" />
+    <Content Include="Areas\Business\Css\LYJD\LYJD_CJY.css" />
     <Content Include="Areas\Business\Css\LYJD\LYJD_GNY.css" />
+    <Content Include="Areas\Business\Css\LYJD\LYJD_JDZSYD.css" />
     <Content Include="Areas\Business\Css\LYJD\LYJD_LXS.css" />
     <Content Include="Areas\Business\Css\LYJD\LYJD_ZBY.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_JXJG.css" />
@@ -652,8 +654,12 @@
     <Content Include="Areas\Business\Scripts\Business\LR\LR_WSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\LR\LR_YJ.js" />
     <Content Include="Areas\Business\Scripts\Business\LR\LR_YJYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_CJY.js" />
+    <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_CJYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_GNY.js" />
     <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_GNYYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_JDZSYD.js" />
+    <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_JDZSYDYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_LXS.js" />
     <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_LXSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_ZBY.js" />
@@ -1311,7 +1317,9 @@
     <Compile Include="Areas\Business\Controllers\LR\LR_WDController.cs" />
     <Compile Include="Areas\Business\Controllers\LR\LR_WSController.cs" />
     <Compile Include="Areas\Business\Controllers\LR\LR_YJController.cs" />
+    <Compile Include="Areas\Business\Controllers\LYJD\LYJD_CJYController.cs" />
     <Compile Include="Areas\Business\Controllers\LYJD\LYJD_GNYController.cs" />
+    <Compile Include="Areas\Business\Controllers\LYJD\LYJD_JDZSYDController.cs" />
     <Compile Include="Areas\Business\Controllers\LYJD\LYJD_LXSController.cs" />
     <Compile Include="Areas\Business\Controllers\LYJD\LYJD_ZBYController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_AFSBController.cs" />
@@ -1695,6 +1703,8 @@
     <Content Include="Areas\Business\Views\LYJD_LXS\LYJD_LXS.cshtml" />
     <Content Include="Areas\Business\Views\LYJD_GNY\LYJD_GNY.cshtml" />
     <Content Include="Areas\Business\Views\LYJD_ZBY\LYJD_ZBY.cshtml" />
+    <Content Include="Areas\Business\Views\LYJD_CJY\LYJD_CJY.cshtml" />
+    <Content Include="Areas\Business\Views\LYJD_JDZSYD\LYJD_JDZSYD.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
