--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Maps\LYJD\LYJD_CJYJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_GNYJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_JDZSYDJBXX_Map.cs" />
+    <Compile Include="Maps\LYJD\LYJD_JPJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_LXSJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_KQHLJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_MFHFJBXX_Map.cs" />
@@ -355,6 +356,7 @@
     <Compile Include="Models\LYJD\LYJD_CJYJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_GNYJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_JDZSYDJBXX.cs" />
+    <Compile Include="Models\LYJD\LYJD_JPJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_LXSJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_ZBYJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_AFSBJBXX.cs" />
