--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Maps\CODES\CODES_SWFW_Map.cs" />
     <Compile Include="Maps\CODES\CODES_XXYL_Map.cs" />
     <Compile Include="Maps\CODES\CODES_ZSJM_Map.cs" />
+    <Compile Include="Maps\CODES\CODES_ZXJC_Map.cs" />
     <Compile Include="Maps\CW\CW_CWFWJBXX_Map.cs" />
     <Compile Include="Maps\CW\CW_CWGJBXX_Map.cs" />
     <Compile Include="Maps\CW\CW_CWMJBXX_Map.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="Maps\JYPX\JYPX_ZXXYDYJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ZYJNPXJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_CJYJBXX_Map.cs" />
+    <Compile Include="Maps\LYJD\LYJD_DYDDRBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_GNYJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_JDZSYDJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_JPJBXX_Map.cs" />
@@ -260,6 +262,7 @@
     <Compile Include="Maps\ZSJM\ZSJM_TSJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_WLFWJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_WTMYETJBXX_Map.cs" />
+    <Compile Include="Maps\ZXJC\ZXJC_JZFWJBXX_Map.cs" />
     <Compile Include="Models\CL\CL_GCCJBXX.cs" />
     <Compile Include="Models\CL\CL_HCJBXX.cs" />
     <Compile Include="Models\CL\CL_JCJBXX.cs" />
@@ -286,6 +289,7 @@
     <Compile Include="Models\CODES\CODES_SWFW.cs" />
     <Compile Include="Models\CODES\CODES_XXYL.cs" />
     <Compile Include="Models\CODES\CODES_ZSJM.cs" />
+    <Compile Include="Models\CODES\CODES_ZXJC.cs" />
     <Compile Include="Models\CW\CW_CWFWJBXX.cs" />
     <Compile Include="Models\CW\CW_CWGJBXX.cs" />
     <Compile Include="Models\CW\CW_CWMJBXX.cs" />
@@ -354,6 +358,7 @@
     <Compile Include="Models\LR\LR_WSJBXX.cs" />
     <Compile Include="Models\LR\LR_YJJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_CJYJBXX.cs" />
+    <Compile Include="Models\LYJD\LYJD_DYDDRJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_GNYJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_JDZSYDJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_JPJBXX.cs" />
@@ -469,6 +474,7 @@
     <Compile Include="Models\ZSJM\ZSJM_TSJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_WLFWJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_WTMYETJBXX.cs" />
+    <Compile Include="Models\ZXJC\ZXJC_JZFWJBXX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
